--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Understanding TypeScript</title>
   <!-- <script src="function.js" defer></script>
   <script src="app.js" defer></script> -->
-  <script src="classes.js" defer></script>
+  <script src="interface.js" defer></script>
 </head>
 <body>
   
